Большой апдейт с реализацией коллекций и глубоким рефакторингом